# document-intelligence

./: .env.example  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/adr/: 0001-two-phase-classification.md  0002-confidence-review-as-peer-terminal-status.md  0003-review-is-caller-owned.md  0004-confidence-threshold-separate-from-schema.md  0005-job-failed-status.md  0006-technology-stack.md  0007-schema-version-integer.md  0008-confidence-via-self-report.md  0009-provider-exhaustion-routes-to-needs-review.md
docs/agents/: domain.md  triage-labels.md
docs/research/: commercial-document-ai-classification-extraction-validation.md  confidence-via-anthropic-api.md  json-schema-for-classification-extraction-validation.md
eval/: README.md  run_eval.py
eval/golden/: generate_golden_invoices.py
eval/golden/invoice/basic/: expected.json
eval/golden/invoice/high_value/: expected.json
migrations/: env.py
migrations/versions/: 13bef32d9c39_initial.py  48d7dae5df2e_job_attempt_count_and_failed_status.py  53583cb94875_document_classification_confidence.py  d00288b80d66_job_document_page_field_submission_.py  de9a04b19af1_model_calls_table.py
schemas/invoice/: config.json  v1.json
scripts/: generate_sample_invoice.py  manual_test.py
src/document_intelligence/: config.py  grouping.py  health.py  main.py  observability.py  pipeline.py  redis_client.py  rendering.py  storage.py  worker.py
src/document_intelligence/api/: deps.py  documents.py  dto.py  errors.py  jobs.py  submissions.py
src/document_intelligence/db/: __init__.py  models.py  session.py
src/document_intelligence/model_provider/: __init__.py  anthropic_provider.py  errors.py  fake.py  protocol.py  recording.py  retry.py  types.py
src/document_intelligence/schema_registry/: __init__.py  registry.py
tests/: conftest.py  support.py  test_confidence_review.py  test_extraction_validation.py  test_grouping.py  test_health.py  test_job_failure.py  test_model_provider_anthropic.py  test_model_provider_contract.py  test_model_provider_fake.py  test_multi_page_splitting.py  test_observability.py  test_pipeline_idempotency.py  test_schema_registry.py  test_stuck_job_reconciliation.py  test_submission_limits.py  test_transient_retry.py  test_walking_skeleton.py
