[project]
name = "document-intelligence"
version = "0.1.0"
description = "Schema-based document classification and extraction system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "aioboto3>=13.2",
    "anthropic>=0.117.0",
    "pypdfium2>=5.12.1",
    "jsonschema>=4.26.0",
    "python-multipart>=0.0.32",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # FastAPI's `Depends()` in argument defaults is the idiomatic pattern
    "UP042", # str+Enum (not StrEnum) is intentional throughout db/models.py
    "UP046", # PEP 695 generics not worth the diff on a single generic helper
]

[tool.mypy]
python_version = "3.12"
packages = ["document_intelligence"]
mypy_path = "src"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
